# T3

./: .gitignore  POSTGRES.md  PROJECT_STRUCTURE.md  Readme.md  Testing.md  main.py  model.txt  model_pg.txt  pyproject.toml
benchmark_setup/queries/: 01-tpchSf1-load.sql  01-tpchSf10-load.sql  01-tpchSf100-load.sql  02-tpcdsSf1-load.sql  02-tpcdsSf10-load.sql  02-tpcdsSf100-load.sql  03-job-load.sql  04-airline-load.sql  05-ssb-load.sql  06-walmart-load.sql  07-financial-load.sql  08-basketball-load.sql  09-accident-load.sql  10-movielens-load.sql  11-baseball-load.sql  12-hepatitis-load.sql  13-tournament-load.sql  14-credit-load.sql  15-employee-load.sql  16-consumer-load.sql  17-geneea-load.sql  18-genome-load.sql  19-carcinogenesis-load.sql  20-seznam-load.sql  21-fhnk-load.sql  data_load_generation.py
benchmark_setup/schemata/: 02-tpcdsSf100-schema.sql
benchmark_setup/scripts/: load_data.sh
dp/: .clang-format  CMakeLists.txt  DP.cpp  compile_lightgbm.sh
src/figures/: infra.py  latency_accuracy.py  latency_scaling.py
src/postgres/: __init__.py  pg_patches.py  pg_to_umbra.py  predict_all_pg.py  predict_from_pg.py  training.py
src/postgres/tpch_sf1/plans/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
testing/: __init__.py  run_umbra_prediction.py
